Added ~cos217/AuthorizedSourcesList pointer in readme

--- a/readme
+++ b/readme
@@ -6,14 +6,10 @@ What is your name?
 
 
 ------------------------------------------------------------------------
-How many late days are you using on this assignment?
-
-
-
-------------------------------------------------------------------------
-What authorized sources of information did you use to complete
-the assignment? COPY THE LIST of authorized sources of information
-given in the "Policies" web page to this section of the readme file,
+What authorized sources of information did you use to complete the
+assignment? COPY THE LIST of authorized sources of information given
+in the "Policies" web page (also available on armlab in the file
+~cos217/AuthorizedSourcesList ) to this section of the readme file,
 and edit it as appropriate.
 
 
