--- a/readme
+++ b/readme
@@ -2,8 +2,7 @@ Assignment 2 readme File
 
 ------------------------------------------------------------------------
 What is your name?
-
-
+Ziya Momin
 
 ------------------------------------------------------------------------
 What authorized sources of information did you use to complete the
@@ -25,7 +24,7 @@ may trigger a course penalty, and depending on the nature of the
 interaction, may additionally require the interaction being reported
 to the Committee on Discipline. Write "None" if you used no
 unauthorized sources of information.
-
+None
 
 
 ------------------------------------------------------------------------
@@ -35,7 +34,7 @@ enter your name in the space below the following affirmation:
 
 This paper represents my own work in accordance with University
 regulations.
-
+Ziya Momin
 
 
 ------------------------------------------------------------------------
