Add assert to get rid of warning in replace.c critTer

--- a/readme
+++ b/readme
@@ -2,6 +2,7 @@ Assignment 2 readme File
 
 ------------------------------------------------------------------------
 What is your name?
+
 Ziya Momin
 
 ------------------------------------------------------------------------
@@ -11,7 +12,19 @@ in the "Policies" web page (also available on armlab in the file
 ~cos217/AuthorizedSourcesList ) to this section of the readme file,
 and edit it as appropriate.
 
+The course's lectures.
 
+The course's precepts.
+
+The course's website.
+
+Documents that are referenced directly by the course's website. Such documents include the course's lecture slides and precept handouts.
+
+The course's textbooks and reference manuals.
+
+The man pages on the armlab cluster.
+
+The course's current staff members outside of class time through Ed.
 
 ------------------------------------------------------------------------
 What unauthorized sources of information did you use to complete the
@@ -24,6 +37,7 @@ may trigger a course penalty, and depending on the nature of the
 interaction, may additionally require the interaction being reported
 to the Committee on Discipline. Write "None" if you used no
 unauthorized sources of information.
+
 None
 
 
@@ -62,6 +76,8 @@ disagreements with them? Copy the splint warnings here, and express your
 disagreement after each warning. If there are no warnings, then write
 "None."
 
+None.
+
 
 
 ------------------------------------------------------------------------
@@ -70,6 +86,8 @@ disagreements with them? Copy the critTer warnings here, and express
 your disagreement after each warning. If there are no warnings, then
 write "None."
 
+None.
+
 
 ------------------------------------------------------------------------
 What warnings does splint generate on strp.c, and what are your
@@ -77,6 +95,7 @@ disagreements with them? Copy the splint warnings here, and express your
 disagreement after each warning. If there are no warnings, then write
 "None."
 
+None.
 
 
 ------------------------------------------------------------------------
@@ -85,7 +104,7 @@ disagreements with them? Copy the critTer warnings here, and express
 your disagreement after each warning. If there are no warnings, then
 write "None."
 
-
+None.
 
 ------------------------------------------------------------------------
 What warnings does splint generate on replace.c, and what are your
@@ -93,7 +112,7 @@ disagreements with them? Copy the splint warnings here, and express your
 disagreement after each warning. If there are no warnings, then write
 "None."
 
-
+None.
 
 ------------------------------------------------------------------------
 What warnings does critTer generate on replace.c, and what are your
@@ -101,7 +120,15 @@ disagreements with them? Copy the critTer warnings here, and express
 your disagreement after each warning. If there are no warnings, then
 write "None."
 
+I get the following critTer warnings:
+replace.c: line 20: medium priority:
+Do you want to validate 'pcLine' through an assert?
 
+replace.c: line 20: medium priority:
+Do you want to validate 'pcFrom' through an assert?
+
+replace.c: line 20: medium priority:
+Do you want to validate 'pcTo' through an assert?
 
 ------------------------------------------------------------------------
 Is it possible for Str_copy or Str_concat to call assert to verify
